# EAG-V3-Week-9

./: .dockerignore  .gitignore  Dockerfile  README.md  agent_config.yaml  agent_routing.yaml  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  usage.json
corpus/: MANIFEST.json
corpus/dag/: ASSIGNMENT.json
docs/: BROWSER.md  DEFERRALS.md  GLOSSARY.md  TASKS.md  VALIDATION.md
prompts/: browser.md  calculator.md  coder.md  critic.md  distiller.md  formatter.md  planner.md  prosody_analyst.md  researcher.md  retriever.md  sandbox_executor.md  summariser.md
runs/: __init__.py
sandbox/browser/: canvas-only.html
scripts/: clean.py  serve.sh  test_playwright.sh
scripts/browser/: analyze_browser_session.py  export_browser_replay.py  seed_browser_sessions.py
scripts/dag/: analyze_session_timing.py  run_query.py
static/: dag-graph.js
super_browser/: __init__.py  action.py  agent.py  artifact_store.py  catalog.py  comparison_format.py  dag_schemas.py  decision.py  documents.py  flow.py  gateway_client.py  graph_viz.py  indexing.py  indexing_async.py  llm_env.py  llm_retry.py  mcp_server.py  memory.py  paths.py  perception.py  persistence.py  pricing_enrich.py  recovery.py  sandbox.py  schemas.py  search_providers.py  skills.py  vision_api.py
super_browser/browser/: __init__.py  a11y.py  agent_layer.py  agent_loop.py  browser_backend.py  dom.py  (+24 more)
templates/: index.html
tests/: conftest.py  test_architecture.py  test_assignment_spec.py  test_browser.py  test_browser_agent.py  test_browser_urls.py  test_browser_use_bridge.py  test_browseros_bridge.py  test_comparison_format.py  test_critic_autoinsert.py  test_dag_agent_ui.py  test_dag_flow.py  test_dag_llm_client.py  test_dag_mcp_tools.py  test_dag_queries_api.py  test_dag_resume_api.py  test_dag_web_fetch.py  test_deferrals.py  test_document_ingest.py  test_graph_viz.py  test_heuristic_tool.py  test_indexing_async.py  test_iteration_logs.py  test_llm_env.py  test_llm_retry.py  test_page_capture.py  test_paths_and_guards.py  test_playwright_live.py  test_pricing_enrich.py  test_recovery.py  test_recovery_amnesia.py  test_sandbox.py  test_vision_api.py  test_vlm_parse.py  test_worked_queries.py
(+5 files in other folders)
