[project]
name = "super-browser-agent"
version = "0.1.0"
description = "Super Browser Agent — DAG orchestrator with four-layer browser cascade, replay viewer, and MCP tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Browser cascade
    "httpx",
    "playwright>=1.47",
    "pillow>=10.0",
    "trafilatura>=1.12",
    "lxml>=5.2",
    "lxml-html-clean>=0.1",
    # Agent / DAG
    "networkx>=3.2",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "pydantic>=2.13.4",
    "python-dotenv",
    "faiss-cpu>=1.8.0",
    # Researcher
    "crawl4ai",
    "duckduckgo-search",
    "tavily-python",
    # LLM
    "google-genai",
    # MCP
    "mcp[cli]",
    # Web UI (SSE stream uses FastAPI's native StreamingResponse)
    "fastapi",
    "uvicorn",
    "jinja2",
    "python-multipart",
    "loguru",
    # Documents
    "pymupdf",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pyright>=1.1.410",
]
browser-use = [
    "browser-use",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["super_browser*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
